Fixed link visible in the mobile now

--- a/packages/block-library/src/navigation/style.scss
+++ b/packages/block-library/src/navigation/style.scss
@@ -542,6 +542,7 @@ button.wp-block-navigation-item__content {
 			// A default padding is added to submenu items. It's not appropriate inside the modal.
 			.wp-block-navigation-item__content {
 				padding: 0;
+				color: #000;
 			}
 
 			// Default column display for overlay menu contents.
